--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ html,body{margin:0;padding:0;font-family:Inter,system-ui,Arial,sans-serif;backgr
 .card .sonda-title{ font-weight:600; font-size:15px; margin-bottom:8px; }
 .tog{ font-size:13px; color:var(--muted); display:flex; gap:8px; align-items:center; margin-bottom:8px; }
 .charts{ display:flex; gap:10px; align-items:center; justify-content:center; flex-wrap:wrap; padding:6px 0; }
-canvas{ width:110px !important; height:110px !important; }
+canvas{ width:121px !important; height:121px !important; } /* +10% tamaño */
 .labels{ display:flex; gap:10px; justify-content:center; margin-top:6px; flex-wrap:wrap; }
 .lbl{ font-size:12px; color:var(--muted); text-align:center; min-width:95px; }
 .val{ font-weight:700; color:var(--text); margin-top:4px; font-size:14px; }
@@ -71,7 +71,6 @@ function tempColor(v){
   return v<=25?'rgba(46,204,113,0.8)':(v<=30?'rgba(241,196,15,0.8)':'rgba(231,76,60,0.8)'); 
 }
 
-// Degradado de color para humedad según porcentaje
 function humColor(v){
   if(v <= 20) return 'rgba(135,206,250,0.8)';      // azul claro
   else if(v <= 40) return 'rgba(0,162,255,0.8)';   // azul medio
@@ -198,9 +197,7 @@ db.ref("prueba").on("value", snap => {
 
     document.getElementById(`tempVal-${i+1}`).textContent = `${t} °C`;
     document.getElementById(`humVal-${i+1}`).textContent = `${h} %`;
-
-    const distMM = Math.round(d);
-    document.getElementById(`dist-${i+1}`).textContent = `${distMM} mm`;
+    document.getElementById(`dist-${i+1}`).textContent = `${Math.round(d)} mm`;
 
     if(chartsT[i]){
       chartsT[i].data.datasets[0].data[0] = t;
@@ -221,9 +218,35 @@ db.ref("prueba").on("value", snap => {
   updateSummary();
 });
 
-/* --- Historial semanal/mensual --- */
-document.getElementById('histWeek').addEventListener('click',()=>{ alert('Función historial semanal activa'); });
-document.getElementById('histMonth').addEventListener('click',()=>{ alert('Función historial mensual activa'); });
+/* --- Descarga CSV historial --- */
+function downloadCSV(filename, rows) {
+  const csvContent = rows.map(e => e.join(",")).join("\n");
+  const blob = new Blob([csvContent], { type: 'text/csv;charset=utf-8;' });
+  const link = document.createElement("a");
+  link.href = URL.createObjectURL(blob);
+  link.setAttribute("download", filename);
+  document.body.appendChild(link);
+  link.click();
+  document.body.removeChild(link);
+}
+
+document.getElementById('histWeek').addEventListener('click', ()=>{
+  const rows = [["Sonda","Fecha","Temperatura °C","Humedad %","Distancia mm"]];
+  for(let i=0;i<NUM;i++){
+    const v = lastValues[i];
+    if(v) rows.push([i+1, formatDateShort(new Date()), v.t, v.h, v.dist]);
+  }
+  downloadCSV("historial_semanal.csv", rows);
+});
+
+document.getElementById('histMonth').addEventListener('click', ()=>{
+  const rows = [["Sonda","Fecha","Temperatura °C","Humedad %","Distancia mm"]];
+  for(let i=0;i<NUM;i++){
+    const v = lastValues[i];
+    if(v) rows.push([i+1, formatDateShort(new Date()), v.t, v.h, v.dist]);
+  }
+  downloadCSV("historial_mensual.csv", rows);
+});
 
 /* --- Modo claro/oscuro --- */
 document.getElementById('modeToggle').addEventListener('click',()=>document.body.classList.toggle('light'));
