--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 <style>
-:root{ --bg:#0f1720; --card:#0f1725; --text:#e6eef6; --muted:#9aa9bd; --accent:#00c8ff; --danger:#ff3b3b; --shadow:0 8px 20px rgba(2,8,23,0.6); }
-body.light{ --bg:#f3f6fb; --card:#ffffff; --text:#1b2330; --muted:#556575; --accent:#007BFF; --danger:#ff3b3b; --shadow:0 6px 18px rgba(16,24,40,0.08); }
+:root{
+  --bg:#0f1720; --card:#0f1725; --text:#e6eef6; --muted:#9aa9bd; --accent:#00c8ff; --danger:#ff3b3b; --shadow:0 8px 20px rgba(2,8,23,0.6);
+}
+body.light{--bg:#f3f6fb;--card:#ffffff;--text:#1b2330;--muted:#556575;--accent:#007BFF;--danger:#ff3b3b;--shadow:0 6px 18px rgba(16,24,40,0.08);}
 html,body{margin:0;padding:0;font-family:Inter,system-ui,Arial,sans-serif;background:var(--bg);color:var(--text);height:100%;}
 .app{max-width:1200px;margin:18px auto;padding:14px;}
 .header{display:flex;gap:12px;align-items:center;justify-content:space-between;margin-bottom:16px;}
@@ -33,6 +35,7 @@ canvas{ width:110px !important; height:110px !important; }
 .note{ margin-top:12px;color:var(--muted);font-size:13px; text-align:center; }
 .presenciaAlert{ font-weight:700; text-align:center; padding:8px 6px; margin-top:8px; border-radius:8px; background: rgba(255,0,0,0.04); color: #ff8a8a; min-height:44px; display:flex; flex-direction:column; justify-content:center; }
 .presenciaAlert b{ color:var(--danger); }
+.controls input[type=range]{width:100px;}
 </style>
 </head>
 <body>
@@ -46,6 +49,8 @@ canvas{ width:110px !important; height:110px !important; }
       <button id="modeToggle" class="mode-btn">Modo claro / oscuro</button>
       <button id="histWeek" class="mode-btn">Última semana</button>
       <button id="histMonth" class="mode-btn">Último mes</button>
+      <label style="color:var(--muted)">Tamaño gráfico:</label>
+      <input type="range" id="chartSize" min="80" max="200" value="110">
     </div>
   </div>
 
@@ -64,26 +69,34 @@ canvas{ width:110px !important; height:110px !important; }
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-database-compat.js"></script>
 
 <script>
-const NUM = 5, DIST_THRESHOLD_MM = 40;
-const chartsT = [], chartsH = [], active = [true,false,false,false,false], lastValues = Array(NUM).fill(null), badCount = Array(NUM).fill(0);
+/* CONFIGURACIÓN GLOBAL */
+const CONFIG = {
+  NUM_SONDAS: 5,
+  DIST_THRESHOLD_MM: 40,
+  maxTemp: 50,
+  maxHum: 100,
+  chartSize: 110,
+  tempColors:[
+    {max:25,color:'rgba(46,204,113,0.8)'},
+    {max:30,color:'rgba(241,196,15,0.8)'},
+    {max:Infinity,color:'rgba(231,76,60,0.8)'}
+  ],
+  humColors:[
+    {max:20,color:'rgba(135,206,250,0.8)'},
+    {max:40,color:'rgba(0,162,255,0.8)'},
+    {max:60,color:'rgba(46,204,113,0.8)'},
+    {max:80,color:'rgba(241,196,15,0.8)'},
+    {max:Infinity,color:'rgba(231,76,60,0.8)'}
+  ]
+};
 
-function tempColor(v){ 
-  return v<=25?'rgba(46,204,113,0.8)':(v<=30?'rgba(241,196,15,0.8)':'rgba(231,76,60,0.8)'); 
-}
+const chartsT=[], chartsH=[], active=Array(CONFIG.NUM_SONDAS).fill(true), lastValues=Array(CONFIG.NUM_SONDAS).fill(null), badCount=Array(CONFIG.NUM_SONDAS).fill(0);
 
-// Degradado de color para humedad según porcentaje
-function humColor(v){
-  if(v <= 20) return 'rgba(135,206,250,0.8)';      // azul claro
-  else if(v <= 40) return 'rgba(0,162,255,0.8)';   // azul medio
-  else if(v <= 60) return 'rgba(46,204,113,0.8)';  // verde
-  else if(v <= 80) return 'rgba(241,196,15,0.8)';  // amarillo
-  else return 'rgba(231,76,60,0.8)';               // rojo
-}
+function tempColor(v){ return CONFIG.tempColors.find(c=>v<=c.max).color; }
+function humColor(v){ return CONFIG.humColors.find(c=>v<=c.max).color; }
+function formatDateShort(d){return `${String(d.getDate()).padStart(2,'0')}/${String(d.getMonth()+1).padStart(2,'0')} ${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;}
 
-function formatDateShort(d){ 
-  return `${String(d.getDate()).padStart(2,'0')}/${String(d.getMonth()+1).padStart(2,'0')} ${String(d.getHours()).padStart(2,'0')}:${String(d.getMinutes()).padStart(2,'0')}`;
-}
-
+/* CREAR TARJETAS */
 function createCard(i){
   const grid=document.getElementById('grid');
   const card=document.createElement('div'); card.className='card'; card.id=`card-${i+1}`;
@@ -91,13 +104,13 @@ function createCard(i){
   card.innerHTML=`
     <div class="sonda-title">Sonda ${i+1}</div>
     <div class="tog">
-      <label><input type="checkbox" id="toggle-${i+1}" ${active[i]?'checked':''}> Activar</label>
+      <label><input type="checkbox" id="toggle-${i+1}" checked> Activar</label>
       <div style="flex:1"></div>
       <div style="font-size:12px;color:var(--muted)">Dist: <span id="dist-${i+1}">--</span></div>
     </div>
     <div class="charts">
-      <canvas id="t-${i+1}"></canvas>
-      <canvas id="h-${i+1}"></canvas>
+      <canvas id="t-${i+1}" width="${CONFIG.chartSize}" height="${CONFIG.chartSize}"></canvas>
+      <canvas id="h-${i+1}" width="${CONFIG.chartSize}" height="${CONFIG.chartSize}"></canvas>
     </div>
     <div class="labels">
       <div class="lbl"><div class="muted">Temperatura</div><div class="val" id="tempVal-${i+1}">-- °C</div></div>
@@ -106,40 +119,30 @@ function createCard(i){
   `;
   grid.appendChild(card);
 
-  const presencia=document.createElement("div"); presencia.className="presenciaAlert"; presencia.id=`pres-${i+1}`; card.appendChild(presencia);
-
-  const toggle=card.querySelector(`#toggle-${i+1}`);
-  toggle.addEventListener('change',(ev)=>{ 
-    active[i]=ev.target.checked; 
-    card.classList.toggle('inactive',!active[i]); 
-    updateSummary(); 
-  });
-
   const ctxT=card.querySelector(`#t-${i+1}`).getContext('2d');
   const ctxH=card.querySelector(`#h-${i+1}`).getContext('2d');
 
   chartsT[i]=new Chart(ctxT,{
     type:'doughnut',
-    data:{datasets:[{data:[0,50],backgroundColor:[tempColor(0),'#2b3944'],borderWidth:0}]},
+    data:{datasets:[{data:[0,CONFIG.maxTemp],backgroundColor:[tempColor(0),'#2b3944'],borderWidth:0}]},
     options:{rotation:-90,circumference:180,cutout:'72%',plugins:{legend:{display:false},tooltip:{enabled:false}},animation:{duration:300}}
   });
 
   chartsH[i]=new Chart(ctxH,{
     type:'doughnut',
-    data:{datasets:[{data:[0,100],backgroundColor:[humColor(0),'#2b3944'],borderWidth:0}]},
+    data:{datasets:[{data:[0,CONFIG.maxHum],backgroundColor:[humColor(0),'#2b3944'],borderWidth:0}]},
     options:{rotation:-90,circumference:180,cutout:'72%',plugins:{legend:{display:false},tooltip:{enabled:false}},animation:{duration:300}}
   });
 }
 
+/* --- Resumen y alertas --- */
 function updateSummary(){
   let act=0, alerts=0, sumT=0, sumH=0, count=0;
-  for(let i=0;i<NUM;i++){
+  for(let i=0;i<CONFIG.NUM_SONDAS;i++){
     if(!active[i]) continue;
-    act++;
-    const v=lastValues[i];
-    if(!v) continue;
+    act++; const v=lastValues[i]; if(!v) continue;
     sumT+=v.t; sumH+=v.h; count++;
-    if(v.dist > DIST_THRESHOLD_MM) alerts++;
+    if(v.dist>CONFIG.DIST_THRESHOLD_MM) alerts++;
   }
   document.getElementById('numActivas').textContent=act;
   document.getElementById('numAlertas').textContent=alerts;
@@ -147,37 +150,31 @@ function updateSummary(){
   document.getElementById('promHum').textContent=(count?Math.round(sumH/count):'--')+' %';
 }
 
-function applyDistanceAlert(i, dist){
+function applyDistanceAlert(i,dist){
   const card=document.getElementById(`card-${i+1}`);
-  if(dist > DIST_THRESHOLD_MM) badCount[i]++; else badCount[i]=0;
-  if(badCount[i] >= 4) activarPresencia(i, dist);
-  else quitarPresencia(i);
+  if(dist>CONFIG.DIST_THRESHOLD_MM) badCount[i]++; else badCount[i]=0;
+  if(badCount[i]>=4) activarPresencia(i,dist); else quitarPresencia(i);
 }
 
-function activarPresencia(i, dist){
-  const card=document.getElementById(`card-${i+1}`); 
-  if(!card) return; 
+function activarPresencia(i,dist){
+  const card=document.getElementById(`card-${i+1}`); if(!card) return;
   card.classList.add('alert');
   const box=document.getElementById(`pres-${i+1}`);
   if(box){
-    const now=new Date();
-    const distMM = Math.round(dist);
+    const now=new Date(); const distMM=Math.round(dist);
     box.innerHTML=`<div style="font-size:13px"><b>PRESENCIA DETECTADA</b></div>
                    <div style="font-size:12px;color:var(--muted)">${formatDateShort(now)}</div>
                    <div style="font-size:13px">Dist: ${distMM} mm</div>`;
   }
 }
-
 function quitarPresencia(i){
-  const card=document.getElementById(`card-${i+1}`); 
-  if(!card) return; 
+  const card=document.getElementById(`card-${i+1}`); if(!card) return;
   card.classList.remove('alert');
-  const box=document.getElementById(`pres-${i+1}`); 
-  if(box) box.innerHTML='';
+  const box=document.getElementById(`pres-${i+1}`); if(box) box.innerHTML='';
 }
 
-/* --- Inicializa cards --- */
-for(let i=0;i<NUM;i++) createCard(i);
+/* --- Inicializa tarjetas --- */
+for(let i=0;i<CONFIG.NUM_SONDAS;i++) createCard(i);
 updateSummary();
 
 /* --- FIREBASE --- */
@@ -185,49 +182,53 @@ const firebaseConfig={ databaseURL:"https://enlace-t-default-rtdb.firebaseio.com
 firebase.initializeApp(firebaseConfig);
 const db=firebase.database();
 
-db.ref("prueba").on("value", snap => {
+db.ref("prueba").on("value", snap=>{
   const data = snap.val();
-  for(let i=0;i<NUM;i++){
+  for(let i=0;i<CONFIG.NUM_SONDAS;i++){
     if(!active[i]) continue;
     const s = data ?? {};
     const t = Number(s.Temperatura_C ?? 0);
     const h = Number(s.Humedad_pct ?? 0);
     const d = Number(s.Distancia_mm ?? 0);
+    lastValues[i]={t,h,dist:d};
 
-    lastValues[i] = {t,h,dist:d};
-
-    document.getElementById(`tempVal-${i+1}`).textContent = `${t} °C`;
-    document.getElementById(`humVal-${i+1}`).textContent = `${h} %`;
-
-    const distMM = Math.round(d);
-    document.getElementById(`dist-${i+1}`).textContent = `${distMM} mm`;
+    document.getElementById(`tempVal-${i+1}`).textContent=`${t} °C`;
+    document.getElementById(`humVal-${i+1}`).textContent=`${h} %`;
+    document.getElementById(`dist-${i+1}`).textContent=`${Math.round(d)} mm`;
 
     if(chartsT[i]){
-      chartsT[i].data.datasets[0].data[0] = t;
-      chartsT[i].data.datasets[0].data[1] = 50-t;
-      chartsT[i].data.datasets[0].backgroundColor[0] = tempColor(t);
+      chartsT[i].data.datasets[0].data[0]=t;
+      chartsT[i].data.datasets[0].data[1]=CONFIG.maxTemp-t;
+      chartsT[i].data.datasets[0].backgroundColor[0]=tempColor(t);
       chartsT[i].update();
     }
     if(chartsH[i]){
-      chartsH[i].data.datasets[0].data[0] = h;  
-      chartsH[i].data.datasets[0].data[1] = 100-h;
-      chartsH[i].data.datasets[0].backgroundColor[0] = humColor(h);
+      chartsH[i].data.datasets[0].data[0]=h;
+      chartsH[i].data.datasets[0].data[1]=CONFIG.maxHum-h;
+      chartsH[i].data.datasets[0].backgroundColor[0]=humColor(h);
       chartsH[i].update();
     }
-
     applyDistanceAlert(i,d);
   }
-
   updateSummary();
 });
 
-/* --- Historial semanal/mensual --- */
-document.getElementById('histWeek').addEventListener('click',()=>{ alert('Función historial semanal activa'); });
-document.getElementById('histMonth').addEventListener('click',()=>{ alert('Función historial mensual activa'); });
-
-/* --- Modo claro/oscuro --- */
+/* --- Controles --- */
+document.getElementById('histWeek').addEventListener('click',()=>{ alert('Historial semanal activo'); });
+document.getElementById('histMonth').addEventListener('click',()=>{ alert('Historial mensual activo'); });
 document.getElementById('modeToggle').addEventListener('click',()=>document.body.classList.toggle('light'));
+
+/* --- Control dinámico tamaño gráfico --- */
+document.getElementById('chartSize').addEventListener('input', e=>{
+  CONFIG.chartSize=Number(e.target.value);
+  for(let i=0;i<CONFIG.NUM_SONDAS;i++){
+    chartsT[i].canvas.width=CONFIG.chartSize;
+    chartsT[i].canvas.height=CONFIG.chartSize;
+    chartsH[i].canvas.width=CONFIG.chartSize;
+    chartsH[i].canvas.height=CONFIG.chartSize;
+    chartsT[i].resize(); chartsH[i].resize();
+  }
+});
 </script>
 </body>
 </html>
-
