--- a/index.html
+++ b/index.html
@@ -10,32 +10,99 @@
 <style>
 :root{ --bg:#0f1720; --card:#0f1725; --text:#e6eef6; --muted:#9aa9bd; --accent:#00c8ff; --danger:#ff3b3b; --shadow:0 8px 20px rgba(2,8,23,0.6); }
 body.light{ --bg:#f3f6fb; --card:#ffffff; --text:#1b2330; --muted:#556575; --accent:#007BFF; --danger:#ff3b3b; --shadow:0 6px 18px rgba(16,24,40,0.08); }
-html,body{margin:0;padding:0;font-family:Inter,system-ui,Arial,sans-serif;background:var(--bg);color:var(--text);height:100%;}
+
+html,body{
+  margin:0;
+  padding:0;
+  font-family:Inter,system-ui,Arial,sans-serif;
+  background:var(--bg);
+  color:var(--text);
+  height:100%;
+}
+
 .app{max-width:1200px;margin:18px auto;padding:14px;}
 .header{display:flex;gap:12px;align-items:center;justify-content:space-between;margin-bottom:16px;}
-.title h1{margin:0;font-size:20px;} .title p{margin:0;color:var(--muted);font-size:13px;}
+.title h1{margin:0;font-size:20px;}
+.title p{margin:0;color:var(--muted);font-size:13px;}
+
 .controls{display:flex;gap:10px;align-items:center;}
 .mode-btn{background:transparent;border:1px solid rgba(255,255,255,0.06);color:var(--text);padding:8px 10px;border-radius:8px;cursor:pointer;font-size:13px;}
+
 .summary{display:flex;gap:12px;margin-bottom:18px;flex-wrap:wrap;}
 .metric{background:var(--card);padding:12px 14px;border-radius:10px;box-shadow:var(--shadow);min-width:140px;text-align:center;}
-.metric small{display:block;color:var(--muted);font-size:12px;} .metric b{display:block;font-size:18px;margin-top:6px;}
+.metric small{display:block;color:var(--muted);font-size:12px;}
+.metric b{display:block;font-size:18px;margin-top:6px;}
+
 .grid{display:grid;grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));gap:16px;}
-.card{background:var(--card);border-radius:12px;padding:14px;box-shadow:var(--shadow);position:relative;transition: box-shadow .25s ease, transform .18s ease, border-color .15s ease;border: 2px solid transparent;overflow:hidden;}
-.card.alert{border-color: var(--danger); box-shadow:0 12px 30px rgba(255,50,50,0.12);}
-.card .sonda-title{ font-weight:600; font-size:15px; margin-bottom:8px; }
-.tog{ font-size:13px; color:var(--muted); display:flex; gap:8px; align-items:center; margin-bottom:8px; }
+
+.card{
+  background:var(--card);
+  border-radius:12px;
+  padding:14px;
+  box-shadow:var(--shadow);
+  position:relative;
+  transition: box-shadow .25s ease, transform .18s ease, border-color .15s ease;
+  border: 2px solid transparent;
+  overflow:hidden;
+}
+
+.card.alert{
+  border-color: var(--danger);
+  box-shadow:0 12px 30px rgba(255,50,50,0.12);
+}
+
+.card .sonda-title{
+  font-weight:600;
+  font-size:15px;
+  margin-bottom:8px;
+}
+
+.tog{
+  font-size:13px;
+  color:var(--muted);
+  display:flex;
+  gap:8px;
+  align-items:center;
+  margin-bottom:8px;
+}
+
 .charts{ display:flex; gap:10px; align-items:center; justify-content:center; flex-wrap:wrap; padding:6px 0; }
 canvas{ width:110px !important; height:110px !important; }
+
 .labels{ display:flex; gap:10px; justify-content:center; margin-top:6px; flex-wrap:wrap; }
 .lbl{ font-size:12px; color:var(--muted); text-align:center; min-width:95px; }
 .val{ font-weight:700; color:var(--text); margin-top:4px; font-size:14px; }
+
 .card.inactive{ opacity:.35; filter:grayscale(.1); }
+
 .note{ margin-top:12px;color:var(--muted);font-size:13px; text-align:center; }
-.presenciaAlert{ font-weight:700; text-align:center; padding:8px 6px; margin-top:8px; border-radius:8px; background: rgba(255,0,0,0.04); color: #ff8a8a; min-height:44px; display:flex; flex-direction:column; justify-content:center; }
-.presenciaAlert b{ color:var(--danger); }
+
+/* ------- CORREGIDO: sin fondo marrón ------- */
+.presenciaAlert{
+  font-weight:700;
+  text-align:center;
+  padding:8px 6px;
+  margin-top:8px;
+  border-radius:8px;
+  background: transparent;  
+  color: var(--danger);
+  min-height:44px;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  transition: background 0.25s ease;
+}
+
+/* 🔴 SOLO cuando hay ALARMA: rojo suave */
+.card.alert .presenciaAlert {
+  background: rgba(255, 0, 0, 0.12);
+  border: 1px solid rgba(255,0,0,0.18);
+  color: var(--danger);
+}
 </style>
 </head>
 <body>
+
 <div class="app">
   <div class="header">
     <div class="title">
@@ -57,7 +124,10 @@ canvas{ width:110px !important; height:110px !important; }
   </div>
 
   <div class="grid" id="grid"></div>
-  <div class="note">Umbral alerta distancia: <b> > 40 mm </b> (4 cm → objeto caído)</div>
+
+  <div class="note">
+    Umbral alerta distancia: <b> > 40 mm </b> (4 cm → objeto caído)
+  </div>
 </div>
 
 <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
@@ -71,13 +141,12 @@ function tempColor(v){
   return v<=25?'rgba(46,204,113,0.8)':(v<=30?'rgba(241,196,15,0.8)':'rgba(231,76,60,0.8)'); 
 }
 
-// Degradado de color para humedad según porcentaje
 function humColor(v){
-  if(v <= 20) return 'rgba(135,206,250,0.8)';      // azul claro
-  else if(v <= 40) return 'rgba(0,162,255,0.8)';   // azul medio
-  else if(v <= 60) return 'rgba(46,204,113,0.8)';  // verde
-  else if(v <= 80) return 'rgba(241,196,15,0.8)';  // amarillo
-  else return 'rgba(231,76,60,0.8)';               // rojo
+  if(v <= 20) return 'rgba(135,206,250,0.8)';
+  else if(v <= 40) return 'rgba(0,162,255,0.8)';
+  else if(v <= 60) return 'rgba(46,204,113,0.8)';
+  else if(v <= 80) return 'rgba(241,196,15,0.8)';
+  return 'rgba(231,76,60,0.8)';
 }
 
 function formatDateShort(d){ 
@@ -86,8 +155,11 @@ function formatDateShort(d){
 
 function createCard(i){
   const grid=document.getElementById('grid');
-  const card=document.createElement('div'); card.className='card'; card.id=`card-${i+1}`;
+  const card=document.createElement('div'); 
+  card.className='card'; 
+  card.id=`card-${i+1}`;
   if(!active[i]) card.classList.add('inactive');
+
   card.innerHTML=`
     <div class="sonda-title">Sonda ${i+1}</div>
     <div class="tog">
@@ -104,9 +176,13 @@ function createCard(i){
       <div class="lbl"><div class="muted">Humedad</div><div class="val" id="humVal-${i+1}">-- %</div></div>
     </div>
   `;
+
   grid.appendChild(card);
 
-  const presencia=document.createElement("div"); presencia.className="presenciaAlert"; presencia.id=`pres-${i+1}`; card.appendChild(presencia);
+  const presencia=document.createElement("div");
+  presencia.className="presenciaAlert";
+  presencia.id=`pres-${i+1}`;
+  card.appendChild(presencia);
 
   const toggle=card.querySelector(`#toggle-${i+1}`);
   toggle.addEventListener('change',(ev)=>{ 
@@ -138,9 +214,14 @@ function updateSummary(){
     act++;
     const v=lastValues[i];
     if(!v) continue;
-    sumT+=v.t; sumH+=v.h; count++;
+
+    sumT+=v.t; 
+    sumH+=v.h; 
+    count++;
+
     if(v.dist > DIST_THRESHOLD_MM) alerts++;
   }
+
   document.getElementById('numActivas').textContent=act;
   document.getElementById('numAlertas').textContent=alerts;
   document.getElementById('promTemp').textContent=(count?Math.round(sumT/count):'--')+' °C';
@@ -149,7 +230,9 @@ function updateSummary(){
 
 function applyDistanceAlert(i, dist){
   const card=document.getElementById(`card-${i+1}`);
-  if(dist > DIST_THRESHOLD_MM) badCount[i]++; else badCount[i]=0;
+  if(dist > DIST_THRESHOLD_MM) badCount[i]++;
+  else badCount[i]=0;
+
   if(badCount[i] >= 4) activarPresencia(i, dist);
   else quitarPresencia(i);
 }
@@ -158,13 +241,16 @@ function activarPresencia(i, dist){
   const card=document.getElementById(`card-${i+1}`); 
   if(!card) return; 
   card.classList.add('alert');
+
   const box=document.getElementById(`pres-${i+1}`);
   if(box){
     const now=new Date();
     const distMM = Math.round(dist);
-    box.innerHTML=`<div style="font-size:13px"><b>PRESENCIA DETECTADA</b></div>
-                   <div style="font-size:12px;color:var(--muted)">${formatDateShort(now)}</div>
-                   <div style="font-size:13px">Dist: ${distMM} mm</div>`;
+    box.innerHTML=`
+      <div style="font-size:13px"><b>PRESENCIA DETECTADA</b></div>
+      <div style="font-size:12px;color:var(--muted)">${formatDateShort(now)}</div>
+      <div style="font-size:13px">Dist: ${distMM} mm</div>
+    `;
   }
 }
 
@@ -172,15 +258,14 @@ function quitarPresencia(i){
   const card=document.getElementById(`card-${i+1}`); 
   if(!card) return; 
   card.classList.remove('alert');
+
   const box=document.getElementById(`pres-${i+1}`); 
   if(box) box.innerHTML='';
 }
 
-/* --- Inicializa cards --- */
 for(let i=0;i<NUM;i++) createCard(i);
 updateSummary();
 
-/* --- FIREBASE --- */
 const firebaseConfig={ databaseURL:"https://enlace-t-default-rtdb.firebaseio.com/" };
 firebase.initializeApp(firebaseConfig);
 const db=firebase.database();
@@ -189,6 +274,7 @@ db.ref("prueba").on("value", snap => {
   const data = snap.val();
   for(let i=0;i<NUM;i++){
     if(!active[i]) continue;
+
     const s = data ?? {};
     const t = Number(s.Temperatura_C ?? 0);
     const h = Number(s.Humedad_pct ?? 0);
@@ -208,6 +294,7 @@ db.ref("prueba").on("value", snap => {
       chartsT[i].data.datasets[0].backgroundColor[0] = tempColor(t);
       chartsT[i].update();
     }
+
     if(chartsH[i]){
       chartsH[i].data.datasets[0].data[0] = h;  
       chartsH[i].data.datasets[0].data[1] = 100-h;
@@ -221,13 +308,11 @@ db.ref("prueba").on("value", snap => {
   updateSummary();
 });
 
-/* --- Historial semanal/mensual --- */
 document.getElementById('histWeek').addEventListener('click',()=>{ alert('Función historial semanal activa'); });
 document.getElementById('histMonth').addEventListener('click',()=>{ alert('Función historial mensual activa'); });
 
-/* --- Modo claro/oscuro --- */
 document.getElementById('modeToggle').addEventListener('click',()=>document.body.classList.toggle('light'));
 </script>
+
 </body>
 </html>
-
